# iai_kinect

./: CMakeLists.txt  README.md  package.xml
iai_kinect/: CMakeLists.txt  package.xml
iai_kinect_bringup/: CMakeLists.txt  package.xml
iai_kinect_bringup/launch/: iai_kinect_bringup.launch
iai_kinect_watchdog/: CMakeLists.txt  README.md  package.xml
iai_kinect_watchdog/launch/: kinect_mode_watchdog.launch
iai_kinect_watchdog/src/: kinect_mode_watchdog.py
launch/: kinect_mode_watchdog.launch
src/: kinect_mode_watchdog.cpp
