<?xml version="1.0"?>
<package format="2">
    <name>kinect_mode_watchdog</name>
    <version>0.0.0</version>
    <description>The kinect_mode_watchdog package</description>

    <maintainer email="jeroen.schaefer@outlook.de">Jeroen Schäfer</maintainer>

    <license>BSD</license>

    <url type="website">https://github.com/code-iai/kinect_mode_watchdog</url>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>roscpp</depend>
    <build_depend>std_msgs</build_depend>
    <build_export_depend>std_msgs</build_export_depend>
    <exec_depend>std_msgs</exec_depend>

    <export>
    </export>
</package>
