<?xml version="1.0"?>
<package format="2">
    <name>iai_kinect_watchdog</name>
    <version>0.0.0</version>
    <description>The iai_kinect_watchdog package</description>

    <maintainer email="jeroen.schaefer@outlook.de">Jeroen Schäfer</maintainer>

    <license>BSD</license>

    <url type="website">https://github.com/code-iai/iai_kinect</url>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>rospy</depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>dynamic_reconfigure</build_depend>
    <build_depend>freenect_camera</build_depend>
    <build_export_depend>std_msgs</build_export_depend>
    <exec_depend>std_msgs</exec_depend>

    <export>
    </export>
</package>
